--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/postcss": "^4.1.18",
+		"lucide-react": "^0.563.0",
 		"next": "14.2.35",
 		"react": "^18",
 		"react-dom": "^18"
