--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
 	},
 	"dependencies": {
 		"@tailwindcss/postcss": "^4.1.18",
+		"clsx": "^2.1.1",
 		"lucide-react": "^0.563.0",
 		"next": "14.2.35",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
