--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
 		"check": "biome check --write ."
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/postcss": "^4.1.18",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.563.0",
 		"next": "14.2.35",
